--- a/main.css
+++ b/main.css
@@ -14,9 +14,13 @@ body {
 .header {
     background: #000;
     color: white;
+    position: relative;
 }
 .header .body {
-    background: #222;
+    /* background: #222; */
+    background: transparent;
+    border-left: 2px solid rgba(255,255,255,0.05);
+    border-right: 2px solid rgba(255, 255, 255, 0.05);
 }
 .header hr {
     margin-bottom: 1rem;
