--- a/main.css
+++ b/main.css
@@ -15,12 +15,11 @@ body {
     background: #000;
     color: white;
     position: relative;
+    margin-bottom: 0;
 }
 .header .body {
-    /* background: #222; */
-    background: transparent;
-    border-left: 2px solid rgba(255,255,255,0.05);
-    border-right: 2px solid rgba(255, 255, 255, 0.05);
+    background: rgba(255,255,255,0.025);
+    margin-bottom: -5px;
 }
 .header hr {
     margin-bottom: 1rem;
@@ -39,7 +38,7 @@ body {
 }
 .bread:hover {
     color: #eee;
-    background-color: #444;
+    background-color: rgba(0,0,0,0.2);
 }
 
 
